# haystack

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile-GPU  Dockerfile-GPU-minimal  Dockerfile-frontend  MANIFEST.in  MIGRATION.md  Makefile  PERSONAL_README_run_elasticsearch_in_docker.txt  Pipfile  README.md  README.rst  SECURITY.md  THREAT_MODEL.md  THREAT_MODEL_OWASP_MAPPING.md  TRANSACTION_PROTOCOL.md  VERSION.txt  agent_skills_plan.md  agent_state_access_example.py  answers  chat_extension.py  code_of_conduct.md  code_of_conduct.txt  compaction_example.py  complex_example.py  conftest.py  context7.json  data.json  demo.py  docker-compose-custom.yml  docker-compose-gpu.yml  docker-compose.mitm.yml  docker-compose.test.yml  (+37 more)
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: CODEOWNERS  actionlint.yml  dependabot.yml  labeler.yml  pull_request_template.md  release.yml  requirements.txt  stale.yml
annotation_tool/: README.md  docker-compose.yml
canals/: __about__.py  __init__.py  component.py  errors.py  node.py  save_and_load.py  serialization.py  sockets.py  store.py  type_checking.py  utils.py
docker/: Dockerfile.api  Dockerfile.base  Dockerfile.demo-es  Dockerfile.xpdf  README.md  docker-bake-xpdf.hcl  docker-bake.hcl
docs/: .pydoc-markdown-document-store.yml.swp  .pydoc-markdown.yml.swp  .readthedocs-custom-steps.yml  .readthedocs-requirements.txt  .readthedocs.yml  Makefile  README.md  concepts.md  document_store.md  eu-ai-act-compliance.md  file_converter.md  index.md  make.bat  preprocessor.md  pydoc-markdown-document-store.yml  pydoc-markdown-file-converters.yml  pydoc-markdown-preprocessor.yml  pydoc-markdown-reader.yml  pydoc-markdown-rest-api.yml  pydoc-markdown-retriever.yml  pydoc-markdown.yml  reader.md  release_docs.py  release_docs.sh  rest_api.md  retriever.md
docs-website/: .gitattributes  .gitignore  .vale.ini  CONTRIBUTING.md  README-HAYSTACK-DOCS.md  README.md  docusaurus.config.js  package-lock.json  package.json  reference-sidebars.js  reference_versions.json  sidebars.js  vercel.json  versions.json
document_indexing/: SETUP_S3_STORAGE.md  populate_document_store.py  s3_storage.py
e2e/: conftest.py  models_to_cache.txt
end2end/: test_feature_extraction.py
examples/: 01_getting_started.py  README.md  agent_mem_example.py  agent_multihop_qa.py  agent_multihop_qa_few_shot.py  agent_multihop_qa_zero_shot.py  arxiv_paper_summary.py  basic_faq_pipeline.py  basic_qa_pipeline.py  chatpromptbuilder.py  chinese_RAG_test_haystack_chinese.ipynb  conversational_agent.py  conversational_agent_with_tools.py  data_based_breakpoints.py  exp_retrieval_pipe.py  experiment_web_search.py  getting_started.py  hybrid_search__faq_pipeline.py  hybrid_search_faq_pipeline.py  link_content_blog_post_summary.py  pdf_summary.py  pipeline_checkpoints.py  pipeline_loop_to_autocorrect_json.py  rag_eval_squad.py  resume_breakpoints.py  simple.py  (+16 more)
haystack-linter/: LICENSE  README.md  pyproject.toml
haystack-linter/haystack_linter/: __about__.py  __init__.py  linting.py
haystack-linter/tests/: __init__.py
haystack/preview/rest_api/: __main__.py  app.py  config.py  pyproject.toml
haystack/preview/rest_api/pipelines/: default.json
haystack/preview/rest_api/routers/: __init__.py  about.py  files.py  pipelines.py
haystack/v2/: __init__.py  pipeline.py  pyproject.toml
haystack/v2/data/: __init__.py  answer.py  data.py  document.py  query.py  span.py
haystack/v2/nodes/prompt/: __init__.py  prompt_node.py
haystack/v2/nodes/prompt/providers/: __init__.py  base.py  huggingface.py  openai.py
haystack/v2/rest_api/: README.md  __init__.py  __main__.py  app.py  pyproject.toml
haystack/v2/rest_api/nodes/: __init__.py  string_to_path.py  test_accumulate.py  test_repeat.py  test_subtract.py
haystack/v2/rest_api/pipelines/: default.json  files.json
haystack/v2/rest_api/routers/: __init__.py  files.py  pipelines.py
haystack/v2/rest_api/test/: conftest.py  test_files.py  test_pipelines.py  test_rest_api.py
haystack/v2/rest_api/test/nodes/: __init__.py  double.py  test_add_value.py  test_double.py
haystack/v2/stores/: _utils.py
haystack/v2/stores/memory/: __init__.py  _bm25.py  _scores.py  document_store.py
rest_api/: application.py  config.py  elasticsearch_client.py  pipelines.yaml  pyproject.toml  schema.py  setup.py  utils.py
rest_api/controller/: __init__.py  document.py  documents.py  feedback.py  file_upload.py  pipeline.py  request.py  response.py  router.py  search.py  utils.py
rest_api/controller/errors/: http_error.py
rest_api/pipeline/: __init__.py  custom_component.py  pipeline_empty.haystack-pipeline.yml  pipeline_empty.yaml  pipelines.haystack-pipeline.yml  pipelines.yaml  pipelines_dpr.haystack-pipeline.yml  pipelines_dpr.yaml
rest_api/pipelines/: active.yaml
rest_api/releasenotes/notes/: add-fastapi-streaming-endpoint-f9264b4a0a27eb06.yaml
rest_api/rest_api/: __about__.py  __init__.py  application.py  config.py  schema.py  utils.py
rest_api/rest_api/controller/: __init__.py  document.py  feedback.py  file_upload.py  health.py  search.py  utils.py
rest_api/rest_api/pipeline/: __init__.py  custom_component.py  pipeline_empty.haystack-pipeline.yml  pipelines.haystack-pipeline.faq.yml  pipelines_dpr.haystack-pipeline.yml  pipelines_faq.haystack-pipeline.yml  pipelines_web_lfqa.haystack-pipeline.yaml
rest_api/test/: test_rest_api.py  test_shema.py
rest_api/test/logging/: test_logger.py
rest_api/test/samples/: pipeline.yml  test.bogus_pipeline.yml  test.docstore-no-params-pipeline.yml  test.haystack-pipeline.yml  test.in-memory-haystack-pipeline.yml
rest_api/test/samples/pipeline/: test_pipeline.haystack-pipeline.yml  test_pipeline.yaml  test_pipeline_faiss_indexing.yaml  test_pipeline_faiss_retrieval.yaml
ui/: Dockerfile  README.md  SessionState.py  eval_labels_example.csv  pyproject.toml  requirements.txt  setup.py  st_state_patch.py  utils.py  webapp.py
ui/test/: test_ui_utils.py
ui/ui/: __about__.py  utils.py
(+9593 files in other folders)
